# bitxhub

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile-raft  Dockerfile-solo  Dockerfile.solo  Makefile  README.md  action_go_cache_key.txt  codecov.yml  ent.diff  go.mod  go.sum  goent.diff  goent.mod  goent.replace  goent.sum  index.html  package-lock.json  package.json  sitemap.xml  version.go
.jenkins/: smoke_test.jenkins
config/: LICENSE  README.md  api  axiom.toml  bitxhub.toml  genesis.json  network.toml  network2.toml  node.key  order.toml  preParam_test.data
docs/: README.md  deploy.sh  mkdocs.yml
example/rule_example/: Cargo.toml
example/rule_example/src/: lib.rs  memory.rs
example/rule_example/src/app/: contract.rs  mod.rs
example/rule_example/src/crypto/: ecdsa.rs  mod.rs
example/rule_example/src/model/: mod.rs  transaction.rs
goduck/: index.html
imports/: imports.go  imports.go.template  parallel.go  place.go
javascripts/: config.js
scan/: index.html
scripts/: addNode.sh  boot_bitxhub.sh  build.sh  build_release.sh  bxh_test.sh  cert.sh  clean_storage.sh  cluster-rbft.sh  cluster.sh  cluster_restart.sh  compile.sh  config.sh  cross_compile.sh  deploy.sh  healthcheck.sh  integration.sh  package.sh  prepare.sh  release_binary.sh  restart.sh  smoke_env.sh  smoke_test.sh  solo.sh  stop.sh  update_deps.sh  version.sh  vote.sh  x.sh
search/: search_index.json
stylesheets/: extra.css
tester/: case001_api_test.go  case002_appchain_test.go  case003_interchain_test.go  helper.go  (+9 more)
(+861 files in other folders)
